--- a/index.html
+++ b/index.html
@@ -230,18 +230,21 @@
       render(filtered);
     }
 
-    function shareContact(contactText) {
-      if (navigator.share) {
-        navigator.share({
-          title: 'Contact Info',
-          text: contactText, // Only sharing contact information, not the URL
-        })
-        .then(() => console.log('Contact shared successfully!'))
-        .catch((error) => console.error('Error sharing contact:', error));
-      } else {
-        alert('Sharing is not supported in this browser.');
-      }
-    }
+    function shareContactAsText(name, designation, phone) {
+  const content = `📇 *Contact Info*\n\n*👤 Name:* ${name}\n*💼 Designation:* ${designation}\n*📞 Phone:* ${phone}`;
+
+  if (navigator.share) {
+    navigator.share({
+      title: "Contact Info",
+      text: content
+    }).catch(err => console.log("Share failed:", err));
+  } else {
+    // Fallback to WhatsApp
+    const encoded = encodeURIComponent(content);
+    window.open(`https://wa.me/?text=${encoded}`, "_blank");
+  }
+}
+
   </script>
 </body>
 </html>
