--- a/index.html
+++ b/index.html
@@ -231,19 +231,23 @@
     }
 
     function shareContactAsText(name, designation, phone) {
-  const content = `📇 *Contact Info*\n\n*👤 Name:* ${name}\n*💼 Designation:* ${designation}\n*📞 Phone:* ${phone}`;
+  const content = `📇 Contact Info\n\n👤 Name: ${name}\n💼 Designation: ${designation}\n📞 Phone: ${phone}`;
 
   if (navigator.share) {
     navigator.share({
       title: "Contact Info",
-      text: content
-    }).catch(err => console.log("Share failed:", err));
+      text: content,
+    }).catch((error) => {
+      console.error("Sharing failed", error);
+      alert("Sharing failed. Please try again.");
+    });
   } else {
-    // Fallback to WhatsApp
+    // Fallback for WhatsApp
     const encoded = encodeURIComponent(content);
     window.open(`https://wa.me/?text=${encoded}`, "_blank");
   }
 }
+
 
   </script>
 </body>
