--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
             <p class="phone">${p.phone}</p>
             <div class="actions">
               ${showCall ? `<a href="tel:${p.phone}">Call</a>` : ""}
-              <a href="#" class="share-btn" onclick="shareContact('${shareText}')">Share</a>
-            </div>
+              <a href="#" class="share-btn" onclick="shareContact('${p.name}', '${p.designation}', '${p.phone}')">🔗 Share</a>
+              </div>
           </div>
         `;
       }).join('');
@@ -230,18 +230,25 @@
       render(filtered);
     }
 
-    function shareContact(contactText) {
-      if (navigator.share) {
-        navigator.share({
-          title: 'Contact Info',
-          text: contactText, // Only sharing contact information, not the URL
-        })
-        .then(() => console.log('Contact shared successfully!'))
-        .catch((error) => console.error('Error sharing contact:', error));
-      } else {
-        alert('Sharing is not supported in this browser.');
-      }
-    }
+    function shareContact(name, designation, phone, email) {
+  const shareText = `📇 Contact Info:
+👤 Name: ${name}
+🏢 Designation: ${designation}
+📞 Phone: ${phone}
+✉️ Email: ${email}`;
+
+  if (navigator.share) {
+    navigator.share({
+      title: 'Contact Info',
+      text: shareText,
+    })
+    .then(() => console.log('Contact shared successfully!'))
+    .catch((error) => console.error('Error sharing contact:', error));
+  } else {
+    alert('Sharing is not supported in this browser.');
+  }
+}
+
  </script>
 </body>
 </html>
