--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
   const shareText = `📇 Contact Info:
 👤 Name: ${name}
 🏢 Designation: ${designation}
-📞 Phone: ${phone}
-✉️ Email: ${email}`;
+📞 Phone: ${phone}';
 
   if (navigator.share) {
     navigator.share({
