--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
   const shareText = `📇 Contact Info:
 👤 Name: ${name}
 🏢 Designation: ${designation}
-📞 Phone: ${phone}';
+📞 Phone: ${phone}
+✉️ Email: ${email}`;
 
   if (navigator.share) {
     navigator.share({
