--- a/index.html
+++ b/index.html
@@ -231,18 +231,24 @@
     }
 
     <script>
-  function shareContact(contactText) {
-    if (navigator.share) {
-      navigator.share({
-        title: 'Contact Info',
-        text: contactText, // Only emoji-labeled values
-      })
-      .then(() => console.log('Contact shared successfully!'))
-      .catch((error) => console.error('Error sharing contact:', error));
-    } else {
-      alert('Sharing is not supported in this browser.');
-    }
+ function shareContact(👤, 🏢, 📞) {
+  const shareText = `📇 Contact Info:
+👤 ${name}
+🏢 ${designation}
+📞 ${phone}`;
+
+  if (navigator.share) {
+    navigator.share({
+      title: 'Contact Info',
+      text: shareText,
+    })
+    .then(() => console.log('Contact shared successfully!'))
+    .catch((error) => console.error('Error sharing contact:', error));
+  } else {
+    alert('Sharing is not supported in this browser.');
   }
+}
+
 
 
  </script>
