--- a/index.html
+++ b/index.html
@@ -231,23 +231,22 @@
     }
 
     <script>
- function shareContact(👤, 🏢, 📞) {
-  const shareText = `📇 Contact Info:
-👤 ${name}
-🏢 ${designation}
-📞 ${phone}`;
-
-  if (navigator.share) {
-    navigator.share({
-      title: 'Contact Info',
-      text: shareText,
-    })
-    .then(() => console.log('Contact shared successfully!'))
-    .catch((error) => console.error('Error sharing contact:', error));
-  } else {
-    alert('Sharing is not supported in this browser.');
+ <script>
+  function shareContact(name, designation, phone) {
+    const shareText = `👤 ${name}\n🏢 ${designation}\n📞 ${phone}`;
+    if (navigator.share) {
+      navigator.share({
+        title: 'Contact Info',
+        text: shareText,
+      })
+      .then(() => console.log('Contact shared successfully!'))
+      .catch((error) => console.error('Error sharing contact:', error));
+    } else {
+      alert('Sharing is not supported in this browser.');
+    }
   }
-}
+</script>
+
 
 
 
