--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   }
 
   function shareContact(name, designation, phone) {
-    const shareText = `👤 ${name}\n🏢 ${designation}\n📞 ${phone}`;
+    const shareText = `👤 ${name}\n🏢 ${designation}\n📱 ${phone}`;
     if (navigator.share) {
       navigator.share({
         title: 'Contact Info',
