--- a/index.html
+++ b/index.html
@@ -134,35 +134,37 @@
     }
 
     .actions a {
-      text-decoration: none;
-      font-weight: bold;
-      padding: 8px 14px;
-      border-radius: 25px;
-      display: inline-block;
-      margin: 5px;
-      font-size: 14px;
-      transition: all 0.3s ease;
-    }
+  text-decoration: none;
+  font-weight: bold;
+  padding: 8px 14px;
+  border-radius: 25px;
+  display: inline-block;
+  margin: 5px;
+  font-size: 14px;
+  min-width: 90px;
+  text-align: center;
+  transition: all 0.3s ease;
+}
 
-    .call-btn {
-      background-color: #28a745;
-      color: #fff;
-      border: 1px solid #28a745;
-    }
+.call-btn {
+  background-color: #28a745;
+  color: #fff;
+  border: 1px solid #28a745;
+}
 
-    .call-btn:hover {
-      background-color: #218838;
-    }
+.call-btn:hover {
+  background-color: #218838;
+}
 
-    .share-btn {
-      background-color: #007bff;
-      color: #fff;
-      border: 1px solid #007bff;
-    }
+.share-btn {
+  background-color: #007bff;
+  color: #fff;
+  border: 1px solid #007bff;
+}
 
-    .share-btn:hover {
-      background-color: #0056b3;
-    }
+.share-btn:hover {
+  background-color: #0056b3;
+}
 
     footer {
       margin-top: auto;
