--- a/index.html
+++ b/index.html
@@ -130,16 +130,19 @@
     }
 
     .actions {
-      margin-top: 10px;
-    }
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  flex-wrap: wrap;
+}
 
-    .actions a {
+.actions a {
   text-decoration: none;
   font-weight: bold;
   padding: 8px 14px;
   border-radius: 25px;
   display: inline-block;
-  margin: 5px;
   font-size: 14px;
   min-width: 90px;
   text-align: center;
